# rust-rest-api

./: .env  Cargo.toml  README.md
migrations/2020-11-07-181730_create_products/: down.sql  up.sql
src/: connection.rs  main.rs  schema.rs
src/product/: handler.rs  mod.rs  repository.rs  router.rs
